WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94486
REGRESSION (
r121482
, Lion-only): Closing a popover containing a WKView can crash
https://bugs.webkit.org/show_bug.cgi?id=94486
Summary
REGRESSION (r121482, Lion-only): Closing a popover containing a WKView can crash
John Sullivan
Reported
2012-08-20 09:30:44 PDT
<
http://trac.webkit.org/changeset/121482
> fixed a class of undo-related bugs where undo entries were left on the stack after their target was dealloc’ed. This triggered a Lion-only crash closing an NSPopover that contains a WKView, due to an object lifetime bug in AppKit. This AppKit bug was fixed in OS X 10.8. This bug represents working around that AppKit bug in OS X 10.7. This is in Radar as <
rdar://problem/12128557
>.
Attachments
Patch to avoid a line of recently-added code in the problematic case, only on OS X 10.7
(2.54 KB, patch)
2012-08-20 09:38 PDT
,
John Sullivan
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2012-08-20 09:38:22 PDT
Created
attachment 159453
[details]
Patch to avoid a line of recently-added code in the problematic case, only on OS X 10.7
John Sullivan
Comment 2
2012-08-20 09:54:54 PDT
Fixed in
http://trac.webkit.org/changeset/126041
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug