<https://bugs.webkit.org/show_bug.cgi?id=94486> <rdar://problem/12128557> REGRESSION (r121482, Lion-only): Closing a popover containing a WKView can crash

Reviewed by Darin Adler.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewWillMoveToWindow:]):
Avoid calling the code added in 121482 that ensures that the undo stack is cleaned up
before the WKView is moved from one window to another when the WKView is being moved
out of a popover window. This avoids a bug in OS X 10.7 that was fixed in 10.8.
While this technically reopens a potentially crashing code path that 121482 closed,
it only reopens it for WKViews that are used for text editing and that are removed
from an NSPopover at some time earlier than tear-down of the NSPopover.



Canonical link: https://commits.webkit.org/112282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126041 268f45cc-cd09-0410-ab3c-d52691b4dbfc